--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script src='/app.js'></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <style type="text/css" media="all">
-    body { margin-top: 30px; }
+    body { margin-top: 100px; }
         .templates { display: none; }
     inline-list {
         margin-bottom: 0px; /* Skeleton reset */
@@ -58,7 +58,7 @@
                     <li><a class='text-lg' href="#">LearnJS</a></li>
                     <li><a href="#problem-1">Start</a></li>
                 </ul>
-                <div class='four columns'>
+                <div class='four columns signin-bar'>
                     <span class='navbar-padding u-pull-right'>
                         <span class="g-signin2" data-onsuccess="googleSignIn"></span>
                     </span>
@@ -96,12 +96,19 @@
                         </div>
                     </form>
                 </div>
+                <div class='profile-view'>
+                    <h3>Your Profile</h3>
+                    <div class='email'></div>
+                </div>
                 <div class='correct-flash'>
                     <span>Correct!</span> <a>Next Problem</a>
                 </div>
                 <li class='skip-btn'>
                     <a>Skip This Problem</a>
                 </li>
+                <div class='profile-link navbar-padding-lg'>
+                    <a href="#profile"></a>
+                </div>
             </div>
         </div>
         <script type='text/javascript'>
